archive/legacy-manifests/toolbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toolbox-ingress
  namespace: toolbox
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - toolbox.shopnoltd.dpdns.org
        - api.toolbox.shopnoltd.dpdns.org
        - kf.shopnoltd.dpdns.org
        - kc.shopnoltd.dpdns.org
        - kpi.shopnoltd.dpdns.org
      secretName: toolbox-tls
  rules:
    - host: toolbox.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 8000
    - host: api.toolbox.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 8000
    - host: kf.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kobocat
                port:
                  number: 8000
    - host: kc.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kobocat
                port:
                  number: 8000
    - host: kpi.shopnoltd.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpi
                port:
                  number: 8000
